[gd_scene load_steps=11 format=4 uid="uid://cxr8v6umigqii"]

[ext_resource type="Texture2D" uid="uid://dum3ktldxrmbe" path="res://common/tilesets/kenney_1-bit-platformer_tilemap.png" id="1_fqu2u"]
[ext_resource type="Script" uid="uid://bao8woifdt41g" path="res://levels/level_3/level_3.gd" id="1_upa32"]
[ext_resource type="PackedScene" uid="uid://drr463o7eomch" path="res://common/vision/vision_manager.tscn" id="2_0c4fo"]
[ext_resource type="PackedScene" uid="uid://cqeee1hty6sxe" path="res://entities/props/portal/portal.tscn" id="2_1ylvm"]
[ext_resource type="Shader" uid="uid://bvnxpiwy1qq18" path="res://common/shaders/vision_radius.gdshader" id="4_0c4fo"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_35b77"]
texture = ExtResource("1_fqu2u")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:10/0 = 0
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:11/0 = 0
10:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:11/0 = 0
11:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:11/0 = 0
12:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:11/0 = 0
13:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:12/0 = 0
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:12/0 = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:12/0 = 0
11:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:12/0 = 0
12:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:12/0 = 0
13:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
14:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:17/0 = 0
15:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:17/0 = 0
16:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:17/0 = 0
17:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:17/0 = 0
18:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:17/0 = 0
19:17/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
14:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:18/0 = 0
15:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:18/0 = 0
16:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:18/0 = 0
17:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:18/0 = 0
18:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:18/0 = 0
19:18/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
14:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:19/0 = 0
15:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:19/0 = 0
16:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:19/0 = 0
17:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:19/0 = 0
18:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:19/0 = 0
19:19/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_upa32"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_35b77")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0c4fo"]
shader = ExtResource("4_0c4fo")
shader_parameter/player_pos = Vector2(0, 0)
shader_parameter/radius = 50.0
shader_parameter/ratio = 0.7
shader_parameter/darkness_factor = 0.9

[sub_resource type="Gradient" id="Gradient_e2rvl"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rpg41"]
gradient = SubResource("Gradient_e2rvl")

[node name="Level3" type="Node2D"]
script = ExtResource("1_upa32")

[node name="VisionManager" parent="." instance=ExtResource("2_0c4fo")]

[node name="BackgroundLayer" type="TileMapLayer" parent="."]
light_mask = 2
visibility_layer = 2
tile_map_data = PackedByteArray("AAAAACcAAAAKAAoAAAAAACYAAAAKAAoAAAABACYAAAALAAYAAAABACUAAAALAAkAAAACACUAAAAKAAsAAAACACQAAAAKAAkAAAADACQAAAALAAkAAAAEACQAAAALAAkAAAAFACQAAAAKAAsAAAAFACMAAAAKAAkAAAAGACMAAAALAAkAAAAHACMAAAALAAkAAAAIACMAAAALAAkAAAAJACMAAAALAAoAAAAKACMAAAALAAkAAAALACMAAAALAAkAAAAMACMAAAALAAkAAAANACMAAAALAAkAAAAOACMAAAAKAAsAAAAPACMAAAALAAYAAAAQACMAAAALAAYAAAARACMAAAALAAYAAAASACMAAAALAAYAAAATACMAAAALAAYAAAAUACMAAAALAAYAAAAVACMAAAALAAYAAAAWACMAAAALAAYAAAAWACIAAAALAAYAAAAXACIAAAALAAYAAAAYACIAAAALAAYAAAAZACIAAAALAAYAAAAaACIAAAALAAYAAAAbACIAAAALAAYAAAAcACIAAAALAAYAAAAcACEAAAALAAYAAAAdACEAAAALAAYAAAAeACEAAAALAAYAAAAfACEAAAALAAYAAAAgACEAAAALAAYAAAAhACEAAAALAAYAAAAiACEAAAALAAYAAAAjACEAAAALAAYAAAAkACEAAAALAAYAAAAlACEAAAALAAYAAAAmACEAAAALAAYAAAAnACEAAAALAAYAAAAoACEAAAALAAYAAAApACEAAAALAAYAAAAqACEAAAALAAYAAAArACEAAAALAAYAAAAsACEAAAALAAYAAAAsACAAAAALAAYAAAArACAAAAALAAYAAAAqACAAAAALAAYAAAApACAAAAALAAYAAAAoACAAAAALAAYAAAAnACAAAAALAAYAAAAmAB8AAAALAAkAAAAlAB8AAAALAAkAAAAkAB8AAAALAAkAAAAjAB8AAAALAAkAAAAiAB8AAAALAAkAAAAhAB8AAAALAAkAAAAgACAAAAALAAYAAAAfACAAAAALAAYAAAAeACAAAAALAAYAAAAbACMAAAALAAYAAAAcACMAAAALAAYAAAAdACMAAAALAAYAAAAeACMAAAALAAYAAAAfACMAAAALAAYAAAAgACMAAAALAAYAAAAhACMAAAALAAYAAAAiACMAAAALAAYAAAAjACMAAAALAAYAAAAkACMAAAALAAYAAAAlACMAAAALAAYAAAAmACIAAAALAAYAAAAnACIAAAALAAYAAAAoACIAAAALAAYAAAAlACIAAAALAAYAAAAkACIAAAALAAYAAAAjACIAAAALAAYAAAAiACIAAAALAAYAAAAhACIAAAALAAYAAAAgACIAAAALAAYAAAAfACIAAAALAAYAAAAbACEAAAALAAYAAAAaACEAAAALAAYAAAAZACEAAAALAAYAAAAYACEAAAALAAYAAAAXACEAAAALAAYAAAAWACEAAAALAAYAAAAVACAAAAALAAYAAAAUACAAAAALAAYAAAATACAAAAALAAYAAAASACAAAAALAAYAAAARACAAAAALAAYAAAAQACAAAAALAAYAAAAPACAAAAALAAYAAAAOACAAAAAKAAoAAAAOAB8AAAAKAAkAAAAPAB8AAAALAAkAAAAQAB8AAAALAAkAAAARAB8AAAALAAkAAAASAB8AAAALAAkAAAATAB8AAAALAAkAAAAUAB8AAAALAAkAAAAVAB8AAAALAAkAAAAWAB8AAAALAAkAAAAXACAAAAALAAYAAAAYACAAAAALAAYAAAAZACAAAAALAAYAAAAXACMAAAALAAYAAAAYACMAAAALAAYAAAAZACMAAAALAAYAAAAaACMAAAALAAYAAAAQACIAAAALAAYAAAAPACIAAAALAAYAAAAOACIAAAAKAAoAAAARACIAAAALAAYAAAASACIAAAALAAYAAAATACIAAAALAAYAAAAUACIAAAALAAYAAAAVACIAAAALAAYAAAAdACIAAAALAAYAAAAeACIAAAALAAYAAAAQACEAAAALAAYAAAAPACEAAAALAAYAAAAOACEAAAAKAAoAAAARACEAAAALAAYAAAASACEAAAALAAYAAAATACEAAAALAAYAAAAUACEAAAALAAYAAAAVACEAAAALAAYAAAAqACMAAAALAAYAAAArACMAAAALAAYAAAAsACIAAAALAAYAAAAtACIAAAALAAYAAAAtACEAAAALAAYAAAAuACEAAAALAAYAAAAvACEAAAALAAYAAAAwACEAAAALAAYAAAAxACEAAAALAAYAAAAtACAAAAALAAYAAAAuACAAAAALAAYAAAAvACAAAAALAAYAAAAwACAAAAALAAYAAAAxACAAAAALAAYAAAAyACAAAAAMAAoAAAAyACEAAAAMAAoAAAAxACIAAAALAAYAAAAwACIAAAALAAYAAAAvACMAAAALAAYAAAAuACMAAAALAAYAAAAtACMAAAALAAYAAAAvACIAAAALAAYAAAAyACIAAAAMAAoAAAA6ACIAAAANAAsAAAA7ACIAAAALAAYAAAA8ACIAAAALAAYAAAA9ACIAAAALAAYAAAA+ACIAAAALAAYAAAA/ACMAAAALAAYAAAA/ACQAAAALAAYAAAA+ACQAAAALAAYAAAA9ACQAAAALAAYAAAA8ACQAAAALAAYAAAA8ACUAAAALAAYAAAA7ACUAAAALAAYAAAA6ACUAAAALAAYAAAA5ACUAAAALAAYAAAA6ACQAAAALAAYAAAA7ACQAAAALAAYAAAA7ACMAAAALAAYAAAA5ACQAAAALAAYAAABAACQAAAALAAYAAAA4ACQAAAALAAYAAAA4ACUAAAALAAYAAAA9ACUAAAALAAYAAAA+ACUAAAALAAYAAAA3ACQAAAALAAYAAAA2ACQAAAALAAYAAAA+ACMAAAALAAYAAAA9ACMAAAALAAYAAABBACMAAAALAAYAAABBACEAAAALAAYAAABAACEAAAALAAYAAAA/ACEAAAALAAYAAAA+ACEAAAALAAYAAAA9ACEAAAALAAYAAAA8ACEAAAALAAYAAAA7ACEAAAALAAYAAAA6ACEAAAANAAoAAAA/ACAAAAALAAYAAABAACAAAAALAAYAAABAAB8AAAALAAYAAABAAB4AAAALAAYAAAA/AB4AAAALAAYAAAA+AB4AAAALAAYAAAA9AB4AAAALAAYAAAA8AB4AAAANAAoAAAA8AB8AAAANAAsAAAA9AB8AAAALAAYAAAA+AB8AAAALAAYAAAA/AB8AAAALAAYAAABBAB8AAAALAAYAAABBAB4AAAALAAYAAAA+ABwAAAALAAwAAAA/ABwAAAALAAwAAABBACgAAAALAAYAAABAACgAAAALAAYAAAA/ACgAAAALAAYAAAA+ACgAAAALAAYAAAA+ACcAAAALAAYAAAA9ACcAAAALAAYAAAA8ACcAAAALAAYAAAA7ACcAAAALAAYAAAA6ACcAAAALAAYAAAA6ACgAAAALAAYAAAA5ACgAAAALAAYAAAA4ACgAAAALAAYAAAA3ACgAAAALAAYAAAA7ACgAAAALAAYAAAA8ACgAAAALAAYAAAA9ACgAAAALAAYAAAA2ACgAAAALAAYAAAA1ACgAAAALAAYAAAA0ACgAAAALAAYAAAAzACgAAAALAAYAAAAyACgAAAALAAYAAAAxACgAAAALAAYAAAAwACgAAAALAAYAAAAvACgAAAALAAYAAAAuACgAAAALAAYAAAAtACgAAAALAAYAAAAsACgAAAALAAYAAAArACgAAAALAAYAAAAqACgAAAALAAYAAAApACgAAAALAAYAAAAoACgAAAALAAYAAAAnACgAAAALAAYAAAAmACgAAAALAAYAAAAlACgAAAALAAYAAAAkACgAAAALAAYAAAAjACgAAAALAAYAAAAiACgAAAALAAYAAAAhACgAAAALAAYAAAAgACgAAAALAAYAAAAfACgAAAALAAYAAAAeACgAAAALAAYAAAAdACgAAAALAAYAAAAcACgAAAALAAYAAAAbACgAAAALAAYAAAAaACgAAAALAAYAAAAZACgAAAALAAYAAAAYACgAAAALAAYAAAAXACgAAAALAAYAAAAWACgAAAALAAYAAAAVACgAAAALAAYAAAAUACgAAAALAAYAAAATACgAAAALAAYAAAASACgAAAALAAYAAAARACgAAAALAAYAAAAQACgAAAALAAYAAAAPACgAAAALAAYAAAAOACgAAAALAAYAAAANACgAAAALAAYAAAAMACgAAAALAAYAAAALACgAAAALAAYAAAAKACgAAAALAAYAAAAJACgAAAALAAYAAAAIACgAAAALAAYAAAAHACgAAAALAAYAAAAGACgAAAALAAYAAAAFACgAAAALAAYAAAAEACgAAAALAAYAAAADACgAAAALAAYAAAACACgAAAALAAYAAAABACgAAAALAAYAAAAAACgAAAAKAAsAAAABACcAAAALAAYAAAACACcAAAALAAYAAAADACcAAAALAAYAAAADACYAAAALAAYAAAACACYAAAALAAYAAAAEACYAAAALAAYAAAAFACYAAAALAAYAAAAGACYAAAALAAYAAAAHACYAAAALAAYAAAAEACUAAAALAAYAAAADACUAAAALAAYAAAAFACUAAAALAAYAAAAEACcAAAALAAYAAAAFACcAAAALAAYAAAAGACQAAAALAAYAAAAGACUAAAALAAYAAAAGACcAAAALAAYAAAAHACQAAAALAAYAAAAHACUAAAALAAYAAAAHACcAAAALAAYAAAAIACQAAAALAAYAAAAIACUAAAALAAYAAAAIACYAAAALAAYAAAAIACcAAAALAAYAAAAJACQAAAALAAYAAAAJACUAAAALAAYAAAAJACYAAAALAAYAAAAJACcAAAALAAYAAAAKACQAAAALAAYAAAAKACUAAAALAAYAAAAKACYAAAALAAYAAAAKACcAAAALAAYAAAALACQAAAALAAYAAAALACUAAAALAAYAAAALACYAAAALAAYAAAALACcAAAALAAYAAAAMACQAAAALAAYAAAAMACUAAAALAAYAAAAMACYAAAALAAYAAAAMACcAAAALAAYAAAANACQAAAALAAYAAAANACUAAAALAAYAAAANACYAAAALAAYAAAANACcAAAALAAYAAAAOACQAAAALAAYAAAAOACUAAAALAAYAAAAOACYAAAALAAYAAAAOACcAAAALAAYAAAAPACQAAAALAAYAAAAPACUAAAALAAYAAAAPACYAAAALAAYAAAAPACcAAAALAAYAAAAQACQAAAALAAYAAAAQACUAAAALAAYAAAAQACYAAAALAAYAAAAQACcAAAALAAYAAAARACQAAAALAAYAAAARACUAAAALAAYAAAARACYAAAALAAYAAAARACcAAAALAAYAAAASACQAAAALAAYAAAASACUAAAALAAYAAAASACYAAAALAAYAAAASACcAAAALAAYAAAATACQAAAALAAYAAAATACUAAAALAAYAAAATACYAAAALAAYAAAATACcAAAALAAYAAAAUACQAAAALAAYAAAAUACUAAAALAAYAAAAUACYAAAALAAYAAAAUACcAAAALAAYAAAAVACQAAAALAAYAAAAVACUAAAALAAYAAAAVACYAAAALAAYAAAAVACcAAAALAAYAAAAWACQAAAALAAYAAAAWACUAAAALAAYAAAAWACYAAAALAAYAAAAWACcAAAALAAYAAAAXACQAAAALAAYAAAAXACUAAAALAAYAAAAXACYAAAALAAYAAAAXACcAAAALAAYAAAAYACQAAAALAAYAAAAYACUAAAALAAYAAAAYACYAAAALAAYAAAAYACcAAAALAAYAAAAZACQAAAALAAYAAAAZACUAAAALAAYAAAAZACYAAAALAAYAAAAZACcAAAALAAYAAAAaACQAAAALAAYAAAAaACUAAAALAAYAAAAaACYAAAALAAYAAAAaACcAAAALAAYAAAAbACQAAAALAAYAAAAbACUAAAALAAYAAAAbACYAAAALAAYAAAAbACcAAAALAAYAAAAcACQAAAALAAYAAAAcACUAAAALAAYAAAAcACYAAAALAAYAAAAcACcAAAALAAYAAAAdACQAAAALAAYAAAAdACUAAAALAAYAAAAdACYAAAALAAYAAAAdACcAAAALAAYAAAAeACQAAAALAAYAAAAeACUAAAALAAYAAAAeACYAAAALAAYAAAAeACcAAAALAAYAAAAfACQAAAALAAYAAAAfACUAAAALAAYAAAAfACYAAAALAAYAAAAfACcAAAALAAYAAAAgACQAAAALAAYAAAAgACUAAAALAAYAAAAgACYAAAALAAYAAAAgACcAAAALAAYAAAAhACQAAAALAAYAAAAhACUAAAALAAYAAAAhACYAAAALAAYAAAAhACcAAAALAAYAAAAiACQAAAALAAYAAAAiACUAAAALAAYAAAAiACYAAAALAAYAAAAiACcAAAALAAYAAAAjACQAAAALAAYAAAAjACUAAAALAAYAAAAjACYAAAALAAYAAAAjACcAAAALAAYAAAAkACQAAAALAAYAAAAkACUAAAALAAYAAAAkACYAAAALAAYAAAAkACcAAAALAAYAAAAlACQAAAALAAYAAAAlACUAAAALAAYAAAAlACYAAAALAAYAAAAlACcAAAALAAYAAAAmACMAAAALAAYAAAAmACQAAAALAAYAAAAmACUAAAALAAYAAAAmACYAAAALAAYAAAAmACcAAAALAAYAAAAnACMAAAALAAYAAAAnACQAAAALAAYAAAAnACUAAAALAAYAAAAnACYAAAALAAYAAAAnACcAAAALAAYAAAAoACMAAAALAAYAAAAoACQAAAALAAYAAAAoACUAAAALAAYAAAAoACYAAAALAAYAAAAoACcAAAALAAYAAAApACMAAAALAAYAAAApACQAAAALAAYAAAApACUAAAALAAYAAAApACYAAAALAAYAAAApACcAAAALAAYAAAAqACQAAAALAAYAAAAqACUAAAALAAYAAAAqACYAAAALAAYAAAAqACcAAAALAAYAAAArACQAAAALAAYAAAArACUAAAALAAYAAAArACYAAAALAAYAAAArACcAAAALAAYAAAAsACMAAAALAAYAAAAsACQAAAALAAYAAAAsACUAAAALAAYAAAAsACYAAAALAAYAAAAsACcAAAALAAYAAAAtACQAAAALAAYAAAAtACUAAAALAAYAAAAtACYAAAALAAYAAAAtACcAAAALAAYAAAAuACQAAAALAAYAAAAuACUAAAALAAYAAAAuACYAAAALAAYAAAAuACcAAAALAAYAAAAvACQAAAALAAYAAAAvACUAAAALAAYAAAAvACYAAAALAAYAAAAvACcAAAALAAYAAAAwACMAAAALAAYAAAAwACQAAAALAAYAAAAwACUAAAALAAYAAAAwACYAAAALAAYAAAAwACcAAAALAAYAAAAxACMAAAALAAYAAAAxACQAAAALAAYAAAAxACUAAAALAAYAAAAxACYAAAALAAYAAAAxACcAAAALAAYAAAAyACMAAAAMAAsAAAAyACQAAAALAAYAAAAyACUAAAALAAYAAAAyACYAAAALAAYAAAAyACcAAAALAAYAAAAzACQAAAALAAYAAAAzACUAAAALAAYAAAAzACYAAAALAAYAAAAzACcAAAALAAYAAAA0ACQAAAALAAYAAAA0ACUAAAALAAYAAAA0ACYAAAALAAYAAAA0ACcAAAALAAYAAAA1ACQAAAALAAYAAAA1ACUAAAALAAYAAAA1ACYAAAALAAYAAAA1ACcAAAALAAYAAAA2ACUAAAALAAYAAAA2ACYAAAALAAYAAAA2ACcAAAALAAYAAAA3ACUAAAALAAYAAAA3ACYAAAALAAYAAAA3ACcAAAALAAYAAAA4ACYAAAALAAYAAAA4ACcAAAALAAYAAAA5ACMAAAAMAAwAAAA5ACYAAAALAAYAAAA5ACcAAAALAAYAAAApACIAAAALAAYAAAAqACIAAAALAAYAAAArACIAAAALAAYAAAAuACIAAAALAAYAAAA6ACMAAAALAAYAAAA6ACYAAAALAAYAAAA7ACYAAAALAAYAAAA8ACMAAAALAAYAAAA8ACYAAAALAAYAAAA9ACYAAAALAAYAAAA+ACYAAAALAAYAAAA/ACIAAAALAAYAAAA/ACUAAAALAAYAAAA/ACYAAAALAAYAAAA/ACcAAAALAAYAAABAACIAAAALAAYAAABAACMAAAALAAYAAABAACUAAAALAAYAAABAACYAAAALAAYAAABAACcAAAALAAYAAABBACIAAAALAAYAAABBACQAAAALAAYAAABBACUAAAALAAYAAABBACYAAAALAAYAAABBACcAAAALAAYAAABAAB0AAAALAAYAAABBACAAAAALAAYAAABBAB0AAAALAAYAAAAAACUAAAAKAAkAAAAWACAAAAALAAYAAAAJACIAAAANAAsAAAAJACEAAAANAAoAAAAJACAAAAANAAoAAAAJAB8AAAANAAoAAAAJAB4AAAANAAkAAAAHACIAAAAOAAMAAAAWABoAAAAEAAYAAAAXABoAAAAFAAYAAAAYABoAAAAFAAYAAAAZABoAAAAFAAYAAAAaABoAAAAFAAYAAAAbABoAAAAFAAYAAAAcABoAAAAFAAYAAAAdABoAAAAFAAYAAAAeABoAAAAFAAYAAAAfABoAAAAGAAYAAAANABQAAAAEAAYAAAAOABQAAAAFAAYAAAAPABQAAAAFAAYAAAAQABQAAAAFAAYAAAARABQAAAAFAAYAAAASABQAAAAGAAYAAAAVAA4AAAAEAAYAAAAWAA4AAAAFAAYAAAAXAA4AAAAFAAYAAAAYAA4AAAAGAAYAAAAzAAYAAAAHAAsAAAAzAAcAAAAHAAwAAAAzAAgAAAAHAAwAAAAzAAkAAAAHAAwAAAAzAAoAAAAHAAwAAAAzAAsAAAAHAAwAAAAzAAwAAAAHAA0AAAA0AAwAAAAIAA0AAAA1AAwAAAAIAA0AAAA2AAwAAAAIAA0AAAA3AAwAAAAIAA0AAAA4AAwAAAAIAA0AAAA5AAwAAAAIAA0AAAA6AAwAAAAIAA0AAAA7AAwAAAAIAA0AAAA8AAwAAAAJAA0AAAA8AAsAAAAJAAwAAAA8AAoAAAAJAAwAAAA8AAkAAAAJAAwAAAA8AAgAAAAJAAwAAAA8AAcAAAAJAAwAAAA8AAYAAAAJAAsAAAA0AAYAAAAIAAsAAAA1AAYAAAAIAAsAAAA2AAYAAAAIAAsAAAA3AAYAAAAIAAsAAAA4AAYAAAAIAAsAAAA5AAYAAAAIAAsAAAA6AAYAAAAIAAsAAAA7AAYAAAAIAAsAAAA0AAcAAAALAAYAAAA1AAcAAAALAAYAAAA0AAgAAAALAAYAAAA0AAkAAAALAAYAAAA0AAoAAAALAAYAAAA0AAsAAAALAAYAAAA1AAgAAAALAAYAAAA1AAkAAAALAAYAAAA1AAoAAAALAAYAAAA1AAsAAAALAAYAAAA2AAcAAAALAAYAAAA2AAgAAAALAAYAAAA2AAkAAAALAAYAAAA2AAoAAAALAAYAAAA2AAsAAAALAAYAAAA3AAcAAAALAAYAAAA3AAgAAAALAAYAAAA3AAkAAAALAAYAAAA3AAoAAAALAAYAAAA3AAsAAAALAAYAAAA4AAcAAAALAAYAAAA4AAgAAAALAAYAAAA4AAkAAAALAAYAAAA4AAoAAAALAAYAAAA4AAsAAAALAAYAAAA5AAcAAAALAAYAAAA5AAgAAAALAAYAAAA5AAkAAAALAAYAAAA5AAoAAAALAAYAAAA5AAsAAAALAAYAAAA6AAcAAAALAAYAAAA6AAgAAAALAAYAAAA6AAkAAAALAAYAAAA6AAoAAAALAAYAAAA6AAsAAAALAAYAAAA7AAcAAAALAAYAAAA7AAgAAAALAAYAAAA7AAkAAAALAAYAAAA7AAoAAAALAAYAAAA7AAsAAAALAAYAAAAwABUAAAAAAAgAAAAxABUAAAABAAgAAAAyABUAAAABAAgAAAAzABUAAAABAAgAAAA0ABUAAAABAAgAAAA1ABUAAAABAAgAAAA2ABUAAAABAAgAAAA3ABUAAAABAAgAAAA4ABUAAAACAAgAAAAwABQAAAAAAAcAAAAyABQAAAABAAcAAAAzABQAAAABAAcAAAA0ABQAAAANAAMAAAA1ABQAAAABAAcAAAA2ABQAAAABAAcAAAA3ABQAAAABAAcAAAA4ABQAAAACAAcAAAA6AAMAAAAOABEAAAA6AAQAAAAOABIAAAA6AAUAAAAOABMAAAA7AAMAAAAPABEAAAA7AAQAAAAPABIAAAA7AAUAAAAPABMAAAA8AAMAAAAQABEAAAA8AAQAAAAQABIAAAA8AAUAAAAQABMAAAA6AAAAAAAOABEAAAA6AAEAAAAOABIAAAA6AAIAAAAOABMAAAA7AAAAAAAPABEAAAA7AAEAAAAPABIAAAA7AAIAAAAPABMAAAA8AAAAAAAQABEAAAA8AAEAAAAQABIAAAA8AAIAAAAQABMAAAA4AAUAAAAPAAMAAAAxABQAAAABAAcAAAAXAB8AAAALAAkAAAAYAB8AAAALAAkAAAAZAB8AAAALAAkAAAAaAB8AAAALAAkAAAAbAB8AAAALAAkAAAAcAB8AAAALAAkAAAAdAB8AAAALAAkAAAAeAB8AAAALAAkAAAAfAB8AAAALAAkAAAAgAB8AAAALAAkAAAAkABwAAAARABEAAAAkAB0AAAARABIAAAAkAB4AAAARABMAAAAlABwAAAASABEAAAAlAB0AAAASABIAAAAlAB4AAAASABMAAAAmABwAAAATABEAAAAmAB0AAAATABIAAAAmAB4AAAATABMAAAAkABkAAAAOABEAAAAkABoAAAAOABIAAAAkABsAAAAOABMAAAAlABkAAAAPABEAAAAlABoAAAAPABIAAAAlABsAAAAPABMAAAAmABkAAAAQABEAAAAmABoAAAAQABIAAAAmABsAAAAQABMAAAAkABYAAAARABEAAAAkABcAAAARABIAAAAkABgAAAARABMAAAAlABYAAAASABEAAAAlABcAAAASABIAAAAlABgAAAASABMAAAAmABYAAAATABEAAAAmABcAAAATABIAAAAmABgAAAATABMAAAAkABMAAAAOABEAAAAkABQAAAAOABIAAAAkABUAAAAOABMAAAAlABMAAAAPABEAAAAlABQAAAAPABIAAAAlABUAAAAPABMAAAAmABMAAAAQABEAAAAmABQAAAAQABIAAAAmABUAAAAQABMAAAAfAAoAAAALAAkAAAAfAAsAAAALAAYAAAAfAAwAAAALAAYAAAAfAA0AAAALAAYAAAAfAA4AAAALAAYAAAAfAA8AAAALAAYAAAAfABAAAAALAAYAAAAgAAoAAAALAAkAAAAgAAsAAAALAAYAAAAgAAwAAAALAAYAAAAgAA0AAAALAAYAAAAgAA4AAAALAAYAAAAgAA8AAAALAAYAAAAgABAAAAALAAYAAAAhAAoAAAALAAkAAAAhAAsAAAALAAYAAAAhAAwAAAALAAYAAAAhAA0AAAALAAYAAAAhAA4AAAALAAYAAAAhAA8AAAALAAYAAAAhABAAAAALAAYAAAAiAAoAAAALAAkAAAAiAAsAAAALAAYAAAAiAAwAAAALAAYAAAAiAA0AAAALAAYAAAAiAA4AAAALAAYAAAAiAA8AAAALAAYAAAAiABAAAAALAAYAAAAjAAoAAAALAAkAAAAjAAsAAAALAAYAAAAjAAwAAAALAAYAAAAjAA0AAAALAAYAAAAjAA4AAAALAAYAAAAjAA8AAAALAAYAAAAjABAAAAALAAYAAAAkAAoAAAALAAkAAAAkAAsAAAALAAYAAAAkAAwAAAALAAYAAAAkAA0AAAALAAYAAAAkAA4AAAALAAYAAAAkAA8AAAALAAYAAAAkABAAAAALAAYAAAAlAAoAAAALAAkAAAAlAAsAAAALAAYAAAAlAAwAAAALAAYAAAAlAA0AAAALAAYAAAAlAA4AAAALAAYAAAAlAA8AAAALAAYAAAAlABAAAAALAAYAAAAmAAoAAAALAAkAAAAmAAsAAAALAAYAAAAmAAwAAAALAAYAAAAmAA0AAAALAAYAAAAmAA4AAAALAAYAAAAmAA8AAAALAAYAAAAmABAAAAALAAYAAAAnAAoAAAALAAkAAAAnAAsAAAALAAYAAAAnAAwAAAALAAYAAAAnAA0AAAALAAYAAAAnAA4AAAALAAYAAAAnAA8AAAALAAYAAAAnABAAAAALAAYAAAAoAAoAAAALAAkAAAAoAAsAAAALAAYAAAAoAAwAAAALAAYAAAAoAA0AAAALAAYAAAAoAA4AAAALAAYAAAAoAA8AAAALAAYAAAAoABAAAAALAAYAAAApAAoAAAALAAkAAAApAAsAAAALAAYAAAApAAwAAAALAAYAAAApAA0AAAALAAYAAAApAA4AAAALAAYAAAApAA8AAAALAAYAAAApABAAAAALAAYAAAAqAAoAAAALAAkAAAAqAAsAAAALAAYAAAAqAAwAAAALAAYAAAAqAA0AAAALAAYAAAAqAA4AAAALAAYAAAAqAA8AAAALAAYAAAAqABAAAAALAAYAAAArAAoAAAALAAkAAAArAAsAAAALAAYAAAArAAwAAAALAAYAAAArAA0AAAALAAYAAAArAA4AAAALAAYAAAArAA8AAAALAAYAAAArABAAAAALAAYAAAAsAAoAAAALAAkAAAAsAAsAAAALAAYAAAAsAAwAAAALAAYAAAAsAA0AAAALAAYAAAAsAA4AAAALAAYAAAAsAA8AAAALAAYAAAAsABAAAAALAAYAAAAtAAoAAAAMAAkAAAAtAAsAAAAMAAoAAAAtAAwAAAAMAAoAAAAtAA0AAAAMAAoAAAAtAA4AAAAMAAoAAAAtAA8AAAAMAAoAAAAtABAAAAAMAAoAAAAeAAoAAAAKAAkAAAAeAAsAAAAKAAoAAAAeAAwAAAAKAAoAAAAeAA0AAAAKAAoAAAAeAA4AAAAKAAoAAAAeAA8AAAAKAAoAAAAeABAAAAAKAAoAAAAeABEAAAAKAAsAAAAfABEAAAALAAsAAAAgABEAAAALAAsAAAAhABEAAAALAAsAAAAiABEAAAALAAsAAAAjABEAAAALAAsAAAAkABEAAAALAAsAAAAlABEAAAALAAsAAAAmABEAAAALAAsAAAAnABEAAAALAAsAAAAoABEAAAALAAsAAAApABEAAAALAAsAAAAqABEAAAALAAsAAAArABEAAAALAAsAAAAsABEAAAALAAsAAAAtABEAAAAMAAsAAAAaACAAAAALAAYAAAAbACAAAAALAAYAAAAcACAAAAALAAYAAAAdACAAAAALAAYAAAAhACAAAAALAAYAAAAiACAAAAALAAYAAAAjACAAAAALAAYAAAAkACAAAAALAAYAAAAlACAAAAALAAYAAAAmACAAAAALAAYAAAAnAB8AAAALAAkAAAAoAB8AAAALAAkAAAApAB8AAAALAAkAAAAqAB8AAAALAAkAAAArAB8AAAALAAkAAAAsAB8AAAALAAkAAAAtAB8AAAAKAAsAAAAtAB4AAAAKAAoAAAAtAB0AAAAKAAoAAAAtABwAAAAKAAkAAAAuABwAAAALAAkAAAAvABwAAAALAAkAAAAwABwAAAALAAkAAAAxABwAAAALAAkAAAAyABwAAAAMAAkAAAAyAB0AAAAMAAoAAAAyAB4AAAAMAAoAAAAyAB8AAAAMAAoAAAAzACMAAAAKAAwAAAA0ACMAAAALAAwAAAA1ACMAAAALAAwAAAA2ACMAAAALAAwAAAA3ACMAAAALAAwAAAA4ACMAAAALAAwAAAApABgAAAAEAAYAAAAqABgAAAAFAAYAAAArABgAAAAGAAYAAAArABcAAAAOAAMAAAAtABsAAAAOAAMAAAAqAB4AAAAOAAMAAAAMACIAAAAOAAMAAAAiAB4AAAAOAAMAAAAuAB0AAAALAAYAAAAvAB0AAAALAAYAAAAvAB4AAAALAAYAAAAuAB4AAAALAAYAAAAuAB8AAAALAAYAAAAvAB8AAAALAAYAAAAwAB4AAAALAAYAAAAwAB0AAAALAAYAAAAxAB0AAAALAAYAAAAxAB4AAAALAAYAAAAwAB8AAAALAAYAAAAxAB8AAAALAAYAAAAXABkAAAAOAAMAAAAOABMAAAAOAAMAAAAfAAkAAAANAAMAAAA7ABAAAAAEAAYAAAA8ABAAAAAFAAYAAAA6ACAAAAANAAoAAAA6AB8AAAANAAkAAAA7AB8AAAANAAwAAAA8AB0AAAANAAkAAAA9ABwAAAAKAAwAAAA7ACAAAAALAAYAAAA8ACAAAAALAAYAAAA9ACAAAAALAAYAAAA+ACAAAAALAAYAAAA9AB0AAAALAAYAAAA+AB0AAAALAAYAAAA/AB0AAAALAAYAAAA4ACIAAAAOAAMAAAA5ABgAAAAEAAYAAAA6ABgAAAAFAAYAAAA7ABgAAAAGAAYAAAA+ABAAAAAGAAYAAAA9ABAAAAAFAAYAAABCAAoAAAAIAAsAAABCAAsAAAALAAYAAABCAAwAAAALAAYAAABCAA0AAAAIAA0AAABDAAoAAAAIAAsAAABDAAsAAAALAAYAAABDAAwAAAALAAYAAABDAA0AAAAIAA0AAABEAAoAAAAJAAsAAABEAAsAAAAJAAwAAABEAAwAAAAJAAwAAABEAA0AAAAJAA0AAAA/AAoAAAAOAAMAAABBAAkAAAANAAMAAABBAAoAAAAHAAsAAABBAAsAAAAHAAwAAABBAAwAAAAHAAwAAABBAA0AAAAHAA0AAABEAAkAAAAMAAMAAABGAAoAAAAPAAMAAABAABwAAAAMAAwAAABBABsAAAAIAAwAAABBABwAAAANAAwAAABBABQAAAANAAwAAABAABQAAAANAAwAAABBABMAAAANAAwAAABDACcAAAAKAAwAAABDACgAAAALAAYAAABEACcAAAALAAwAAABEACgAAAALAAYAAABFACgAAAALAAYAAABGACgAAAALAAYAAABCABMAAAANAAkAAABCABQAAAANAAoAAABCABUAAAANAAoAAABCABYAAAANAAoAAABCABcAAAANAAoAAABCABgAAAANAAoAAABCABkAAAANAAoAAABCABoAAAANAAoAAABCABsAAAANAAoAAABCABwAAAANAAoAAABCAB0AAAANAAoAAABCAB4AAAANAAoAAABCAB8AAAANAAoAAABCACAAAAANAAoAAABCACEAAAANAAoAAABCACIAAAANAAoAAABCACMAAAANAAoAAABCACQAAAANAAoAAABCACUAAAANAAoAAABCACYAAAANAAoAAABCACcAAAANAAsAAABCACgAAAALAAYAAABDABEAAAATABEAAABDABIAAAATABMAAABCABEAAAARABEAAABCABIAAAARABMAAABHABMAAAANAAkAAABHABQAAAANAAoAAABHABUAAAANAAoAAABHABYAAAANAAoAAABHABcAAAANAAoAAABHABgAAAANAAoAAABHABkAAAANAAoAAABHABoAAAANAAoAAABHABsAAAANAAoAAABHABwAAAANAAoAAABHAB0AAAANAAoAAABHAB4AAAANAAoAAABHAB8AAAANAAoAAABHACAAAAANAAoAAABHACEAAAANAAoAAABHACIAAAANAAoAAABHACMAAAANAAoAAABHACQAAAANAAoAAABHACUAAAANAAoAAABHACYAAAANAAoAAABHACcAAAANAAsAAABGACcAAAAMAAwAAABFACcAAAALAAwAAABHACgAAAALAAYAAAA=")
tile_set = SubResource("TileSet_upa32")

[node name="Portal1" parent="." instance=ExtResource("2_1ylvm")]
light_mask = 2
visibility_layer = 2
position = Vector2(49, 543)

[node name="Portal2" parent="." instance=ExtResource("2_1ylvm")]
light_mask = 2
visibility_layer = 2
position = Vector2(1105, 594)
scale = Vector2(0.65625, 0.84375)

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2(41, 556)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer" groups=["fade_on_vision"]]
material = SubResource("ShaderMaterial_0c4fo")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_rpg41")
